Add gulp and package files

--- a/givingcougsday.html
+++ b/givingcougsday.html
@@ -5,12 +5,12 @@
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="keywords" content="byu, cougars, giving tuesday, givingcougsday, giving cougsday">
-		<meta name="description" content="October 8, 2018: Support Mentored Learning, Scholarships, and everything great about BYU this year for Giving Cougsday!">
+		<meta name="description" content="November 27, 2018: Support Mentored Learning, Scholarships, and everything great about BYU this year for Giving Cougsday!">
 		<meta name="CreationDate" content="Mon, 8 Oct, 2018">
 		<meta property="fb:app_id" content="225058854284927">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="BYU Giving Cougsday 2018">
-		<meta property="og:description" content="October 8, 2018: Support Mentored Learning, Scholarships, and everything great about BYU this year for Giving Cougsday!">
+		<meta property="og:description" content="November 27, 2018: Support Mentored Learning, Scholarships, and everything great about BYU this year for Giving Cougsday!">
 		<meta property="og:url" content="https://www.ldsphilanthropies.org/byu/givingcougsday.html">
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
 		<title>BYU Giving Cougsday 2018</title>
@@ -37,7 +37,7 @@
 					<h2 class="date">Tuesday, 11.27.2018</h2>
 				</div>
 				<div class="button-wrapper">
-					<a class="donate large" href="https://ldsp-pay.ldschurch.org/donations/byu/campaigns/general.html?cde2=101188&cde1=101188&cid=Cougsday2018&">Donate Now</a>
+					<a class="donate large" href="https://ldsp-pay.ldschurch.org/donations/byu/campaigns/general.html?cde2=101188&cde1=101188&cid=Cougsday2018&">Give Back</a>
 				</div>
 			</div>
 		</header>
@@ -118,7 +118,7 @@
 			<p>&copy; 2018 All Rights Reserved | Provo, UT 84602, USA | 801-356-5300</p>
 		</footer>
 
-		<link rel="stylesheet" type="text/css" href="/css/campaign/cougsday2018.min.css">
+		<link rel="stylesheet" type="text/css" href="cougsday2018.min.css">
 		<script>
 
 			// Add removeClass function to HTML elements
