Update top buttons

--- a/givingcougsday.html
+++ b/givingcougsday.html
@@ -18,17 +18,11 @@
 
 	<body>
 		
-	<div class="icon-bar">
-  		<a href="https://www.facebook.com/BYUAnnualGiving/" class="facebook"><i class="fa fa-facebook"></i></a> 
-  		<a href="https://twitter.com/byu" class="twitter"><i class="fa fa-twitter"></i></a> 
-  		<a href="https://www.instagram.com/byuannualgiving/" class="instagram"><i class="fa fa-instagram"></i></a>
- 
-	</div>	
-		
-	<ul>
-		<li><a href="https://ldsp.org/assets/byu/resources/givingcougsday-toolkit-2017.pdf"><p id="rcorners2">TOOL KIT</p></a></li>
-		<li><a href="https://ldsp-pay.ldschurch.org/donations/byu/campaigns/general.html?cde2=101188&cde1=101188&cid=Cougsday2018&"><p id="rcorners1">GIVE BACK</p></a></li>
-	</ul>
+		<nav class="top-nav">
+			<a href="https://ldsp.org/assets/byu/resources/givingcougsday-toolkit-2017.pdf">Toolkit</a>
+			<a href="https://ldsp-pay.ldschurch.org/donations/byu/campaigns/general.html?cde2=101188&cde1=101188&cid=Cougsday2018&">Give Back</a>
+		</nav>
+
 		<header>
 			<div class="header-wrapper">
 				<div class="title-wrapper">
