Update sidebar icons

--- a/givingcougsday.html
+++ b/givingcougsday.html
@@ -13,6 +13,7 @@
 		<meta property="og:description" content="November 27, 2018: Support Mentored Learning, Scholarships, and everything great about BYU this year for Giving Cougsday!">
 		<meta property="og:url" content="https://www.ldsphilanthropies.org/byu/givingcougsday.html">
 		<link rel="icon" type="image/x-icon" href="/favicon.ico">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 		<title>BYU Giving Cougsday 2018</title>
 	</head>
 
@@ -35,6 +36,12 @@
 				</div>
 			</div>
 		</header>
+
+		<div class="icon-bar">
+			<a href="https://www.facebook.com/BYUAnnualGiving/" class="facebook"><i class="fab fa-facebook"></i></a>
+			<a href="https://twitter.com/byu" class="twitter"><i class="fab fa-twitter"></i></a>
+			<a href="https://www.instagram.com/byuannualgiving/" class="instagram"><i class="fab fa-instagram"></i></a>
+		</div>	
 
 		<main>
 			<div class="panel challenge">
